docs/sdd/SPEC-SUIYIN-ADMIN-053/1.0.1/spec.md
---
spec_id: SPEC-SUIYIN-ADMIN-053
title: "销售使用统计真实结构与租户隔离纠偏"
version: 1.0.1
status: implemented
level: L2
project: "suiyin-admin HTML prototype"
surface: "Admin"
tenants: "当前登记全部十五租户"
owner: "房总"
author: "Codex"
constitution: "prototype-sdd@1.4.1"
depends_on_specs: "SPEC-SUIYIN-ADMIN-051@1.1.0"
last_updated: 2026-09-20
---

> 本轮修订（2026-09-20）：2026-09-20 用户对四张对照截图要求“像素级的同频”，修正后明确“行，现在看着又好不少，先完整推送一次，我们继续迭代”。这是已批准范围的视觉/证据纠偏和本次静态发布授权，不代表全部像素验收通过，也不声称用户逐字审阅生成文件。 不新增业务规则，保留 R-ID、AC-ID、统计口径、租户和菜单范围。状态为 implemented；在线最终对照及未采集证据继续保留。


# 销售使用统计真实结构与租户隔离纠偏

## 1. 审核摘要

- **用户问题**：销售使用统计的通用列表掩盖销售与部门分组，日期查询失效，部门选项跨租户串用，无法作为真实后台的原型参照。
- **完成后变化**：恢复统计标题、人数与合计、销售分组和正确筛选；无多余卡片/分页；各租户只展示自己的已采集证据。
- **本次范围**：salesMessageUsage 的十五租户数据模型、专用页面、筛选/排序/导出及直接预览。
- **明确不做**：不写线上、不进生产仓；静态原型发布按本轮“完整推送”授权；不将旧快照或静态模拟当成当前线上数据/逐像素证据。
- **需要房总拍板**：无。房总在完整差异清单后明确“全部对齐哈”，构成本次纠偏授权。
- **AI 新提案**：无新增业务。快照可用性、分组模型、导出明细和日历是静态实现选择，详见默认值与证据边界。

## 2. 用户问题与预期结果

### 2.1 用户与场景
房总对照真实销售使用统计，评审新统计页面和租户效果。
### 2.2 用户问题
当前原型会把有数据日期筛空、将全表合计当销售排序、显示外租户部门；仅调共享CSS不能恢复真实统计结构。
### 2.3 完成后用户能感受到的变化
同一销售的部门与小计连续可读，人数与合计一致；日期有效，空数据与缺少快照分清；不再出现外租户样本冒充当前数据。
### 2.4 成功信号
| ID | 可观察信号 | 判定方式 |
|---|---|---|
| O001 | 深圳快照94人、7679消息、1939好友；分组排序不拆散 | 数据与DOM复验 |
| O002 | 十五租户无跨租户部门或统计样本 | 独立数据校验 |

## 3. 范围
### 3.1 In Scope
- 已批准审计D01–D14可由本地证据修复的结构、查询、隔离与表示问题。
- 当前线上无法访问时，完成证据确定部分并明确保留视觉待验证项。
### 3.2 Out of Scope
- Flutter / React / Go生产实现、真实认证或API连接、生产数据更改。
- 未观察到的部门库存、未采集日期的虚构结果、未获授权的额外发布与工程Issue。
### 3.3 适用矩阵
| 端 / 租户 | 是否适用 | 继承的Profile | 差异 |
|---|---|---|---|
| Admin全部15租户 | 是 | 051@1.1.0 | 4份本租户采集（含萌爪空态）；11份未采集明确说明 |

## 4. 证据与来源
| ID | 类型 | 来源 | 支持的结论 | 可信状态 |
|---|---|---|---|---|
| E001 | USER | 2026-09-20“再仔细检查下所有差距”，收到清单后“全部对齐哈” | 授权逐项修复 | confirmed |
| E002 | DESIGN | admin-live-reference-2026-09-18/captures/content 下4份salesMessageUsage | 标题、日期表单、分组内容、合计、空态与按钮 | observed |
| E003 | DESIGN | 同目录 full-content/ui-ux-parity/source-profiles.json salesMessageUsage | 六列、右对齐、32px控件、220px日期/部门 | observed |
| E004 | PROTO | 工作目录admin-usage-audit-20260920审计与实际DOM证据 | 14类偏差及根因 | confirmed |
| E005 | USER | 较早提供的其他Admin路由截图 | 蓝色按钮仅为历史临时推断，已被本路由直接证据 E007 替代 | superseded |
| E006 | SPEC | SPEC-SUIYIN-ADMIN-051@1.1.0 | 静态边界与现有Shell | approved |
| E007 | USER | 2026-09-20 四张实站/原型对照图及本轮继续迭代、完整推送指令 | 本路由主操作 #00c4af、分段模式、标签和表格布局；要求按直接截图纠偏 | confirmed |
### 4.1 已发现冲突
- 通用statsSummary、filteredRows、普通表格/分页与该页业务结构冲突，由专用renderer替代，仅作用本route。
- 051允许明确参考样本，但本次全对齐需要恢复萌爪真实空态，缺本租户证据11页停止引用深圳；旧数据文件保留历史，不作为新renderer来源。
- 1.0.0 使用其他路由蓝色按钮作为临时基准的判断被 E007 的本路由直接截图替代：主操作 #00c4af。分段模式、快捷日、部门标签及表格横线按本路由截图恢复；新版本并未证明所有 hover、滚动和字体栅格完全相同。
- 销售使用统计按其采集结构保留单日/范围；销售变声统计052的直接日期区间决策不变。
### 4.2 精确规格依赖
| 依赖 | 用途 | 失效条件 |
|---|---|---|
| SPEC-SUIYIN-ADMIN-051@1.1.0 | Shell、十五租户和静态实现 | 父规格升版或撤销 |

## 5. 用户场景与验收
### US01 — 查看本租户统计
#### AC-R001-01 — 标题与表结构
- Given 已采集深圳数据。
- When 打开统计页。
- Then 展示业务标题和使用人数/消息/好友合计；同销售部门、小计连续，tfoot全表合计无销售名；无额外指标卡/分页/工具栏。
#### AC-R002-01 — 日期与查询
- Given 初始样本日期。
- When 选择同日、有效范围、快捷今天及重置。
- Then 草稿不提前刷新；仅有完整日期样本时汇总；含未采集日期的区间明确缺少快照；今天使用上海当前日期；无该日样本明确提示，不宣称业务零值；逆序/缺失不提交。
#### AC-R003-01 — 租户隔离
- Given 四份本租户采集及十一份缺证据页面。
- When 切换租户、展开部门。
- Then 仅当前租户采样部门；萌爪为采集空态，其余未采集不出现深圳人员/数量。
#### AC-R004-01 — 分组排序
- Given 多部门销售和小计。
- When 按消息或好友升降序排序。
- Then 按销售当前筛选后汇总排序，明细/小计保持一起，tfoot始终最后。
#### AC-R005-01 — 导出
- Given 有筛选结果或空态。
- When 导出。
- Then 只导出当前筛选明细，各数字总和等于页上合计，无小计重复累计；空/缺样本/加载禁用。
#### AC-R006-01 — 控件和样式
- Given 本地页面。
- When 使用日期弹层、部门下拉、键盘和窄窗。
- Then 六列留白真实为空、两个数值列右对齐，搜索/重置/导出同组，无原生日期模式造成缺失；保存实际视觉状态或明确阻塞。
#### AC-R007-01 — 异常状态
- Given 数据读取失败或菜单不可见。
- When 进入页面或重试。
- Then 错误/空态/未采集分别反馈，隐藏菜单直链不能绕过；重试不变更查询。

## 6. 业务规则
| ID | 规则 | 级别 | 来源 | Profile Override | 验收覆盖 |
|---|---|---|---|---|---|
| R001 | 业务标题、人数/合计、分组表与tfoot专用渲染，不强加卡片或分页 | MUST | E001 E002 E004 | 无 | AC-R001-01 |
| R002 | 从日期控件读取合法日历值；默认明确样本日；今天取上海当前日；缺快照不当业务空 | MUST | E001 E002 E004 | 本地冻结快照 | AC-R002-01 |
| R003 | 部门、销售、结果仅使用本租户模型；采集空与未采集区分 | MUST | E001 E002 E004 | 各租户证据覆盖 | AC-R003-01 |
| R004 | 排序对象为销售组，小计与总计不独立排序 | MUST | E001 E002 | 无 | AC-R004-01 |
| R005 | CSV仅明细、覆盖全筛选、数值与摘要一致，空态禁用 | MUST | E001 E004 | 生产文件格式待核实 | AC-R005-01 |
| R006 | 采样列宽/对齐/控件和真实留白，动作同组；未知像素不宣称已匹配 | MUST | E001 E003 E005 | 静态日期弹层 | AC-R006-01 |
| R007 | 权限、错误、重试、加载和空态可识别，不改其他业务页 | MUST | E006 | 无 | AC-R007-01 |
### 6.1 不变量
- INV001：全表合计等于显示明细之和，不包含小计的重复求和。
- INV002：tenantId不符时拒绝展示；缺采集不使用外租户回退。
### 6.2 默认值与配置
| 参数 | 默认值 | 配置粒度 | 来源 | 是否可改 |
|---|---|---|---|---|
| 日期 | 本租户快照日期；无快照时上海今天 | 租户 | E002 静态实现 | 是 |
| 模式 | 单日 | 页面 | E002 | 是 |
| 部门 | 全部样本部门 | 租户 | E004隔离纠偏 | 是 |
| 排序 | 保留原快照销售顺序 | 页面 | E002 | 是 |

## 7. 状态与交互
### 7.1 状态模型
| 当前状态 | 事件 | 条件 | 下一状态 | 用户反馈 | 规则 |
|---|---|---|---|---|---|
| ready | 查询 | 日期有效且覆盖样本日 | success/empty | 分组结果/暂无数据 | R002 |
| ready | 查询 | 未覆盖样本日 | no-snapshot | 所选日期尚无本地样本 | R002 |
| loading | 读取失败 | 静态JSON错误 | error | 重试入口 | R007 |
| any | 租户未采集 | state标记 | not-captured | 本租户尚未采集 | R003 |
### 7.2 状态覆盖矩阵
| 对象 | rest | hover / pressed | focus | selected | disabled | loading | empty | error | overflow | permission |
|---|---|---|---|---|---|---|---|---|---|---|
| 筛选/结果 | 有 | 有 | 有 | 日期/排序 | 导出/加载 | 有 | 独立空态 | 重试 | 横向滚动 | 菜单检查 |
### 7.3 进入、退出与恢复
进入加载本租户专用JSON；日期草稿按搜索提交，重置回样本日期/全部部门/原排序；日历Escape关闭返焦点；刷新读静态源，不继承通用列表脏数据。
### 7.4 文案合同
| 场景 | 文案 | 为什么这样写 | 禁止写法 |
|---|---|---|---|
| 未采集 | 本租户销售使用统计尚未采集 | 缺证据不是零使用 | 冒充暂无业务数据 |
| 缺日期样本 | 所选日期尚无本地样本 | 冻结快照不伪造历史 | 宣称该日期使用人数0 |

## 8. 数据、权限与隐私
### 8.1 展示数据
专用JSON含tenantId、sampleDate、state、groups、departmentOptions；只从已交付本租户模型取人员展示名，从原始采集校验数字，不新增联系信息。
### 8.2 权限
遵循AdminMenuState当前可见范围；仅本地筛选和下载CSV，无生产写权限。
### 8.3 隐私与租户隔离
不发远程API，不从其它租户借用部门/人员；缺证据明确显示。

## 9. 端与租户差异
仅Admin静态HTML。深圳含多部门分组，锦帛/佰智德三简单分组，萌爪采集为空，其他11租户未采集。

## 10. 原型实现契约
- **目标原型仓**：本仓。
- **目标文件 / 路由**：admin-sales-usage.js/css、data/sales-usage/*.json、admin-content.html；route=salesMessageUsage。
- **必须复用的 tokens / 组件**：Shell、按钮SVG、AdminControls部门下拉和菜单可见性。
- **必须模拟的状态**：默认、筛选、加载、空、无快照、未采集、错误/重试、排序、CSV。
- **关键 mock 数据**：保留冻结采集数字，无当前实时统计承诺。
- **预览入口**：https://suiyin-admin.pages.dev/prototype/_shell.html?tenant=yestar-sz&page=salesMessageUsage。
### 10.1 规则到页面映射
R001/R004/R006在分组表；R002筛选；R003专用数据；R005导出；R007状态面板。按对应AC复验。
### 10.2 工程交付准备
not-requested；未生成Handoff/Test Contract。无需生产仓变更。

## 11. 非目标与约束
本地静态原型；本轮“完整推送”授权当前原型发布，不写真实后台。不猜未捕获的当前线上部门和像素。

## 12. 待确认问题
无阻塞业务问题。主操作颜色已从本路由截图确认；当前线上展开控件和完整同视口像素因浏览器连接失败仍为验证待办，不反复请求已获授权。

## 13. 房总审核
- [x] 用户问题和完成后变化准确。
- [x] In / Out Scope 准确。
- [x] 规则、状态和权限准确。
- [x] 端与租户差异准确。
- [x] AI-PROPOSAL 已逐项决定；无新增业务提案。
- [x] 阻塞问题已关闭或明确延期。
- [x] 跨 SPEC 依赖已锁定精确版本。
- [x] 可以进入 Prototype Plan。

**审核结论**：approved  
**审核人**：房总  
**审核日期**：2026-09-20  
**审核备注**：来源为完整差异清单后的明确指令“全部对齐哈”，不声称房总另行逐字审阅了自动整理文件。

## 14. 变更历史
| 版本 | 日期 | 作者 | 变化 | 原因 |
|---|---|---|---|---|
| 1.0.0 | 2026-09-20 | 房总授权 / Codex | 全部已证实差异纠偏 | E001 |

| 1.0.1 | 2026-09-20 | 房总纠偏 / Codex | 直接截图替代蓝色临时依据；恢复分段、标签、表格及滚动外观，R/AC及快照口径不变 | E007，像素纠偏后明确完整推送 |
